# cpp-dev-container

./: .clang-format  CMakeLists.txt  Dockerfile  Makefile  config
.devcontainer/: devcontainer.json
include/: add.h  mul.h  pch.h
src/: add.cpp  main.cpp  mul.cpp
src/include/: private-add.h  private-pch.h
tests/: test-mul.cpp
